agora-eisitiriwn (invalids)

--- a/src/app/agora-eisitirwn/agora-eisitirwn.component.html
+++ b/src/app/agora-eisitirwn/agora-eisitirwn.component.html
@@ -10,185 +10,18 @@
 <link rel="canonical" href="https://form.jotform.com/200066604350342" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=1" />
 <meta name="HandheldFriendly" content="true" />
-<title>PayPal Pro Payment Form</title>
+
+
 <link href="https://cdn.jotfor.ms/static/formCss.css?3.3.14764" rel="stylesheet" type="text/css" />
 <link type="text/css" media="print" rel="stylesheet" href="https://cdn.jotfor.ms/css/printForm.css?3.3.14764" />
 <link type="text/css" rel="stylesheet" href="https://cdn.jotfor.ms/css/styles/nova.css?3.3.14764" />
 <link type="text/css" rel="stylesheet" href="https://cdn.jotfor.ms/themes/CSS/566a91c2977cdfcd478b4567.css?themeRevisionID=5dca5ac9a5e86d17235d90c1"/>
-<style type="text/css">
-    .form-label-left{
-        width:150px;
-    }
-    .form-line{
-        padding-top:12px;
-        padding-bottom:12px;
-    }
-    .form-label-right{
-        width:150px;
-    }
-    body, html{
-        margin:0;
-        padding:0;
-        background:#fff;
-    }
-
-    .form-all{
-        margin:0px auto;
-        padding-top:0px;
-        width:800px;
-        color:#555 !important;
-        font-family:"Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Verdana, sans-serif;
-        font-size:14px;
-    }
-    .form-radio-item label, .form-checkbox-item label, .form-grading-label, .form-header{
-        color: false;
-    }
-
-</style>
-
-<style type="text/css" id="form-designer-style">
-    /* Injected CSS Code */
-/*PREFERENCES STYLE*/
-    .form-all {
-      font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Verdana, Tahoma, sans-serif, sans-serif;
-    }
-    .form-all .qq-upload-button,
-    .form-all .form-submit-button,
-    .form-all .form-submit-reset,
-    .form-all .form-submit-print {
-      font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Verdana, Tahoma, sans-serif, sans-serif;
-    }
-    .form-all .form-pagebreak-back-container,
-    .form-all .form-pagebreak-next-container {
-      font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Verdana, Tahoma, sans-serif, sans-serif;
-    }
-    .form-header-group {
-      font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Verdana, Tahoma, sans-serif, sans-serif;
-    }
-    .form-label {
-      font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Verdana, Tahoma, sans-serif, sans-serif;
-    }
-  
-    .form-label.form-label-auto {
-      
-    display: inline-block;
-    float: left;
-    text-align: left;
-  
-    }
-  
-    .form-line {
-      margin-top: 12px 36px 12px 36px px;
-      margin-bottom: 12px 36px 12px 36px px;
-    }
-  
-    .form-all {
-      width: 800px;
-    }
-  
-    .form-label-left,
-    .form-label-right,
-    .form-label-left.form-label-auto,
-    .form-label-right.form-label-auto {
-      width: 150px;
-    }
-  
-    .form-all {
-      font-size: 14pxpx
-    }
-    .form-all .qq-upload-button,
-    .form-all .qq-upload-button,
-    .form-all .form-submit-button,
-    .form-all .form-submit-reset,
-    .form-all .form-submit-print {
-      font-size: 14pxpx
-    }
-    .form-all .form-pagebreak-back-container,
-    .form-all .form-pagebreak-next-container {
-      font-size: 14pxpx
-    }
-  
-    .supernova .form-all, .form-all {
-      background-color: ;
-      border: 1px solid transparent;
-    }
-  
-    .form-all {
-      color: #555;
-    }
-    .form-header-group .form-header {
-      color: #555;
-    }
-    .form-header-group .form-subHeader {
-      color: #555;
-    }
-    .form-label-top,
-    .form-label-left,
-    .form-label-right,
-    .form-html,
-    .form-checkbox-item label,
-    .form-radio-item label {
-      color: #555;
-    }
-    .form-sub-label {
-      color: #6f6f6f;
-    }
-  
-    .supernova {
-      background-color: undefined;
-    }
-    .supernova body {
-      background: transparent;
-    }
-  
-    .form-textbox,
-    .form-textarea,
-    .form-radio-other-input,
-    .form-checkbox-other-input,
-    .form-captcha input,
-    .form-spinner input {
-      background-color: undefined;
-    }
-  
-    .supernova {
-      background-image: none;
-    }
-    #stage {
-      background-image: none;
-    }
-  
-    .form-all {
-      background-image: none;
-    }
-
-    .input {
-      height:25px;
-      width: 50px;
-      text-align: center;
-			border:1px solid #ddd;
-			border-radius:4px;
-      display: inline-block;
-      vertical-align: middle;
-    }
-  
-  .ie-8 .form-all:before { display: none; }
-  .ie-8 {
-    margin-top: auto;
-    margin-top: initial;
-  }
-  
-  /*PREFERENCES STYLE*//*__INSPECT_SEPERATOR__*/
-    /* Injected CSS Code */
-</style>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/punycode/1.4.1/punycode.min.js"></script>
-<script src="https://cdn.jotfor.ms/static/prototype.forms.js" type="text/javascript"></script>
-<script src="https://cdn.jotfor.ms/static/jotform.forms.js?3.3.14764" type="text/javascript"></script>
 
 
 </head>
 <body>
-<form (ngSubmit)="onSubmit()"a class="jotform-form" action="https://pci.jotform.com/submit/200066604350342" method="post" name="form_200066604350342" id="200066604350342" accept-charset="utf-8">
+
+<form #myForm="ngForm" (ngSubmit)="onSubmit()"a class="jotform-form" action="https://pci.jotform.com/submit/200066604350342" method="post" name="myform" id="200066604350342" accept-charset="utf-8">
   <input type="hidden" name="formID" value="200066604350342" />
   <input type="hidden" id="JWTContainer" value="" />
   <input type="hidden" id="cardinalOrderNumber" value="" />
@@ -227,7 +60,9 @@
                     </label>
                     <span class="form-sub-label-container " style="vertical-align:top">
                       <label class="form-sub-label" style="min-height:13px"> Ποσότητα </label>
-                      <input (keyup)="onKey($event)" type="number" min="0" (onkeypress)="allowOnlyNumber($event)" id="1" value="1" class="input" />
+                      <button id="1" (click)="minus($event)" type="button" class="button"> - </button>
+                      <input [(ngModel)]="myarray[0][1]" type='number' name='1' min="0" class="input"/>
+                      <button id="1" (click)="plus($event)" type="button">+</button>
                     </span>
                   </div>
                 </span>
@@ -256,7 +91,9 @@
                     </label>
                     <span class="form-sub-label-container " style="vertical-align:top">
                       <label class="form-sub-label" style="min-height:13px"> Ποσότητα </label>
-                      <input (keyup)="onKey($event)" type="text" id="2" value="1" class="input" />
+                      <button id="2" (click)="minus($event)" type="button" class="button"> - </button>
+                      <input [(ngModel)]="myarray[1][1]" type='number' name='2' min="0" class="input"/>
+                      <button id="2" (click)="plus($event)" type="button">+</button>
                     </span>
                   </div>
                 </span>
@@ -285,7 +122,9 @@
                     </label>
                     <span class="form-sub-label-container " style="vertical-align:top">
                       <label class="form-sub-label" style="min-height:13px"> Ποσότητα </label>
-                      <input (keyup)="onKey($event)" type="text" id="3" value="1" class="input" />
+                      <button id="3" (click)="minus($event)" type="button" class="button"> - </button>
+                      <input [(ngModel)]="myarray[2][1]" type='number' name='3' min="0" class="input"/>
+                      <button id="3" (click)="plus($event)" type="button">+</button>
                     </span>
                   </div>
                 </span>
@@ -314,7 +153,9 @@
                     </label>
                     <span class="form-sub-label-container " style="vertical-align:top">
                       <label class="form-sub-label" style="min-height:13px"> Ποσότητα </label>
-                      <input (keyup)="onKey($event)" type="text" id="4" value="1" class="input" />
+                      <button id="4" (click)="minus($event)" type="button" class="button"> - </button>
+                      <input [(ngModel)]="myarray[3][1]" type='number' name='4' min="0" class="input"/>
+                      <button id="4" (click)="plus($event)" type="button">+</button>
                     </span>
                   </div>
                 </span>
@@ -342,7 +183,9 @@
                     </label>
                     <span class="form-sub-label-container " style="vertical-align:top">
                       <label class="form-sub-label" style="min-height:13px"> Ποσότητα </label>
-                      <input (keyup)="onKey($event)" type="text" id="5" value="1" class="input" />
+                      <button id="5" (click)="minus($event)" type="button" class="button"> - </button>
+                      <input [(ngModel)]="myarray[4][1]" type='number' name='5' min="0" class="input"/>
+                      <button id="5" (click)="plus($event)" type="button">+</button>
                     </span>
                   </div>
                 </span>
@@ -382,13 +225,19 @@
                   <td width="50%">
                     <span class="form-sub-label-container " style="vertical-align:top">
                       <label class="form-sub-label" for="input_3_cc_firstName" id="sublabel_cc_firstName" style="min-height:13px;margin:0 0 3px 0"> Όνομα </label>
-                      <input  [(ngModel)]="first_name" type="text" id="input_3_cc_firstName" name="q3_myProducts3[cc_firstName]" class="form-textbox cc_firstName" size="20" value="" data-component="cc_firstName" />
+                      <input #first_name="ngModel" required [(ngModel)]="first_name_var" type="text" id="first_name" name="first_name" class="form-control" size="20" value="" data-component="cc_firstName" />
+
+                      <div *ngIf="first_name.invalid && (first_name.dirty || first_name.touched)"
+                        class="alert alert-danger">
+                        <div *ngIf="first_name.errors.required">Name is required.</div>
+                      </div>
+                      
                     </span>
                   </td>
                   <td width="50%">
                     <span class="form-sub-label-container " style="vertical-align:top">
                       <label class="form-sub-label" for="input_3_cc_lastName" id="sublabel_cc_lastName" style="min-height:13px;margin:0 0 3px 0"> Επίθετο </label>
-                      <input [(ngModel)]="last_name" type="text" id="input_3_cc_lastName" name="q3_myProducts3[cc_lastName]" class="form-textbox cc_lastName" size="20" value="" data-component="cc_lastName" />
+                      <input required [(ngModel)]="last_name" type="text" id="last_name" name="last_name" class="form-textbox cc_lastName" size="20" value="" data-component="cc_lastName" />
                     </span>
                   </td>
                 </tr>
@@ -396,13 +245,13 @@
                   <td width="50%">
                     <span class="form-sub-label-container " style="vertical-align:top">
                       <label class="form-sub-label" for="input_3_cc_number" id="sublabel_cc_number" style="min-height:13px;margin:0 0 3px 0"> Αριθμός Πιστωτικής Κάρτας </label>
-                      <input [(ngModel)]="credit_card_number" type="number" id="input_3_cc_number" name="q3_myProducts3[cc_number]" class="form-textbox cc_number" autoComplete="off" size="20" value="" data-component="cc_number" />
+                      <input required [(ngModel)]="credit_card_number" type="number" id="credit_card_number" name="credit_card_number" class="form-textbox cc_number" autoComplete="off" size="20" value="" data-component="cc_number" />
                     </span>
                   </td>
                   <td width="50%">
                     <span class="form-sub-label-container " style="vertical-align:top">
                       <label class="form-sub-label" for="input_3_cc_ccv" id="sublabel_cc_ccv" style="min-height:13px;margin:0 0 3px 0"> Κωδικός Ασφαλείας </label>
-                      <input [(ngModel)]="security_code" type="number" id="input_3_cc_ccv" name="q3_myProducts3[cc_ccv]" class="form-textbox cc_ccv" autoComplete="off" style="width:52px" value="" data-component="cc_ccv" />
+                      <input required [(ngModel)]="security_code" type="number" id="security_code" name="security_code" class="form-textbox cc_ccv" autoComplete="off" style="width:52px" value="" data-component="cc_ccv" />
                     </span>
                   </td>
                 </tr>
@@ -410,7 +259,7 @@
                   <td width="50%">
                     <span class="form-sub-label-container " style="vertical-align:top">
                       <label class="form-sub-label" for="input_3_cc_exp_month" id="sublabel_cc_exp_month" style="min-height:13px;margin:0 0 3px 0"> Ημερομηνία Λήξης  </label>
-                      <select [(ngModel)]="expiration_month" class="form-dropdown cc_exp_month" name="q3_myProducts3[cc_exp_month]" id="input_3_cc_exp_month" data-component="cc_exp_month">
+                      <select required [(ngModel)]="expiration_month" class="form-dropdown cc_exp_month" name="expiration_month" id="expiration_month" data-component="cc_exp_month">
                         <option>  </option>
                         <option value="January"> January </option>
                         <option value="February"> February </option>
@@ -430,7 +279,7 @@
                   <td width="50%">
                     <span class="form-sub-label-container " style="vertical-align:top">
                       <label class="form-sub-label" for="input_3_cc_exp_year" id="sublabel_cc_exp_year" style="min-height:13px;margin:0 0 3px 0"> </label>
-                      <select [(ngModel)]="expiration_year" class="form-dropdown cc_exp_year" name="q3_myProducts3[cc_exp_year]" id="input_3_cc_exp_year" data-component="cc_exp_year">
+                      <select required [(ngModel)]="expiration_year" class="form-dropdown cc_exp_year" name="expiration_year" id="expiration_year" data-component="cc_exp_year">
                         <option>  </option>
                         <option value="2020"> 2020 </option>
                         <option value="2021"> 2021 </option>
@@ -457,13 +306,12 @@
                     Athena Kάρτα
                   </th>
                 </tr>
-                <tr>
-                  <td width="50%">
-                    <span class="form-sub-label-container " style="vertical-align:top">
-                      <label class="form-sub-label" for="input_3_cc_firstName" id="sublabel_cc_firstName" style="min-height:13px;margin:0 0 3px 0"> Αριθμός Κάρτας </label>
-                      <input [(ngModel)]="athena_number" type="text" id="name" name="name" class=" form-textbox cc_firstName" size="20" value="" data-component="cc_firstName" />
-                    </span>
-                  </td>
+                <td width="50%">
+                  <span class="form-sub-label-container " style="vertical-align:top">
+                    <label class="form-sub-label" for="input_3_cc_number" id="sublabel_cc_number" style="min-height:13px;margin:0 0 3px 0"> Αριθμός Πιστωτικής Κάρτας </label>
+                    <input required [(ngModel)]="athena_number" type="number" id="athena_number" name="athena_number" class="form-textbox cc_number" autoComplete="off" size="20" value="" data-component="cc_number" />
+                  </span>
+                </td>
               </tbody>
             </table>
 
@@ -474,10 +322,9 @@
                     Email
                   </th>
                 </tr>
-                <tr>
                   <td width="50%">
                     <span class="form-sub-label-container " style="vertical-align:top">
-                      <input [(ngModel)]="email" type="text" id="input_3_cc_firstName" name="q3_myProducts3[cc_firstName]" class="form-textbox cc_firstName" size="20" value="" data-component="cc_firstName" />
+                      <input required [(ngModel)]="email" type="text" id="email" required name="email" class="form-textbox cc_firstName" size="20" value="" data-component="cc_firstName" />
                     </span>
                   </td>
               </tbody>
@@ -491,7 +338,7 @@
       <li class="form-line" data-type="control_button" id="id_2">
         <div id="cid_2" class="form-input-wide">
           <div style="margin-left:156px" class="form-buttons-wrapper ">
-            <button id="input_2" type="submit" class="form-submit-button" data-component="button" data-content="">
+            <button class="submitbutton" [ngClass] = "{'submitbutton': isDisabled}" [disabled]="!myForm.form.valid" id="input_2" type="submit" class="form-submit-button" data-component="button" data-content="">
               Υποβολή
             </button>
           </div>
