--- a/src/app/forma-paraponon/forma-paraponon.component.css
+++ b/src/app/forma-paraponon/forma-paraponon.component.css
@@ -100,10 +100,10 @@ width: 100%;
     border: 1px solid transparent;
 }
 .supernova {
-    background-color: undefined;
+    /* background-color: ; */
     background-image: none;
     display: flex;
-    justify-content: center;
+    justify-content: left;
     position: relative;
     margin: auto;
     width: 65%;
