--- a/src/app/global/global.component.html
+++ b/src/app/global/global.component.html
@@ -6,22 +6,31 @@
     <div class="oasabar">
         <button *ngIf="greek" type="button" class="btn btn-dark">Ελληνικά</button>
         <button *ngIf="!greek" type="button" class="btn btn-light" (click)="changeLanguage()">Ελληνικά</button>
-        <div class="divider"></div>
+        <!-- <div class="divider"></div> -->
         <button *ngIf="!greek" type="button" class="btn btn-dark">English</button>
         <button *ngIf="greek" type="button" class="btn btn-light" (click)="changeLanguage()">English</button>
         <div class="divider"></div>
-        <button *ngIf="greek" type="button" class="btn btn-light" routerLink='sixneserotiseis'>Συχνές Ερωτήσεις
+        <button *ngIf="greek && !this.http.isLoggedIn()" type="button" class="btn btn-success" routerLink ="login" >Είσοδος</button>
+        <button *ngIf="!greek && !this.http.isLoggedIn()" type="button" class="btn btn-success"  routerLink ="login" >Log In</button>
+        <div class="divider"></div>
+        <button *ngIf="greek && !this.http.isLoggedIn()" type="button" class="btn btn-success"  routerLink ="signup">Δημιουργία Λογαριασμού</button>
+        <button *ngIf="!greek && !this.http.isLoggedIn()" type="button" class="btn btn-success"  routerLink ="signup">Create Account</button>
+        <div class="divider"></div>
+        <button *ngIf="greek && this.http.isLoggedIn()" type="button" class="btn btn-success"  routerLink ="user">Επεξεργασία Λογαριασμού</button>
+        <button *ngIf="!greek && this.http.isLoggedIn()" type="button" class="btn btn-success"  routerLink ="user">Edit Account</button>
+        <div class="divider"></div>
+        <button *ngIf="greek" type="button" class="btn btn-outline-secondary" routerLink='sixneserotiseis'>Συχνές Ερωτήσεις
             <img src="/assets/questionmark1.svg" width="22" height="22" 
             title="Αν πατήσετε στον παραπάνω&#013;σύνδεσμο, θα βρείτε ερωτήσεις&#013;που συχνά κάνουν οι χρήστες&#013;μαζί με τις απαντήσεις τους!">
             <!-- &#010; -->
             <!-- &#013; -->
         </button>
         <button *ngIf="!greek" type="button" class="btn btn-light" routerLink='sixneserotiseis'>Frequent Questions
-            <img src="/assets/questionmark1.svg" width="22" height="22" 
-            title="If you press the above&#013;link, you will find questions&#013;that the users usually ask&#013;together with their response!">
-            <!-- &#010; -->
-            <!-- &#013; -->
-        </button>
+          <img src="/assets/questionmark1.svg" width="22" height="22" 
+          title="If you press the above&#013;link, you will find questions&#013;that the users usually ask&#013;together with their response!">
+          <!-- &#010; -->
+          <!-- &#013; -->
+        </button>       
     </div>
 </div>
 
@@ -41,7 +50,7 @@
             </button>
             <div ngbDropdownMenu class="dropdown-menu">
               <a class="dropdown-item" href="erotimatologio">Ερωτηματολόγιο</a>
-              <a class="dropdown-item" href="">Απολεσθέντα</a>
+              <a class="dropdown-item" href="apolesthenta">Απολεσθέντα</a>
             </div>
           </div>
 
@@ -51,7 +60,7 @@
             </button>
             <div ngbDropdownMenu class="dropdown-menu">
               <a class="dropdown-item" href="erotimatologio">Questionnaire</a>
-              <a class="dropdown-item">Lost</a>
+              <a class="dropdown-item" href="erotimatologio">Lost</a>
             </div>
           </div>
 
@@ -91,7 +100,6 @@
               <a class="dropdown-item" href="">Σημεία έκδοσης στις Σταθερές</a>
               <a class="dropdown-item" href="">Τιμές εισιτηρίων</a>
               <a class="dropdown-item" href="">Τιμές χρονικών προϊόντων</a>
-              <a class="dropdown-item" href="agora">Αγορα Εισιτηρίων </a>
             </div>
           </div>
 
@@ -105,7 +113,6 @@
               <a class="dropdown-item" href="">Ωράριο λειτοθργίας Νυχτερινών - 24ώρων μέσων</a>
               <a class="dropdown-item" href="">Πληροφόρηση σε πραγματικό χρόνο</a>
               <a class="dropdown-item" href="">Σταθμοί μετεπιβίβασης</a>
-              <a class="dropdown-item" href="agora">Buy tickets</a>	
             </div>
           </div>
 
