--- a/src/app/mainpage/mainpage.component.css
+++ b/src/app/mainpage/mainpage.component.css
@@ -44,6 +44,22 @@
   right: 17.5%;
 }
 
+.center4_2 {
+  /* border-color: rgb(201, 76, 76);
+  border-width: 2px;
+  border-style: solid; */
+  
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  margin: auto;
+  width: 30%;
+  height: 300px;
+  top: 509px;
+  /* width: 65%; */
+  right: 17.5%;
+}
+
 .center33 {
   /* border-color: rgb(201, 76, 76);
   border-width: 2px;
@@ -85,9 +101,9 @@
   justify-content: center;
   position: absolute;
   margin: auto;
-  width: 25%;
+  width: 35%;
   height: 30%;
-  top: 37%;
+  top: 36.9%;
   right: 17.5%;
 }
 
@@ -107,6 +123,15 @@
     width: 100%;
     right: 0%;
     border-radius: 25px;
+}
+
+.searchbar {
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  margin: auto;
+  width: 100%;
+  top: 40%;
 }
 
 .whereTo{
@@ -221,3 +246,4 @@ a.hover {
 a.hover:hover {
   text-decoration: underline;
 }
+
