o kostas ton pairnei

--- a/src/app/global/global.component.html
+++ b/src/app/global/global.component.html
@@ -96,11 +96,10 @@
               Εισητήρια - Κάρτες
             </button>
             <div ngbDropdownMenu class="dropdown-menu">
-              <a class="dropdown-item" href="">Σημεία έκδοσης στις Οδικές</a>
-              <a class="dropdown-item" href="">Σημεία έκδοσης στις Σταθερές</a>
+              <a class="dropdown-item" href="shmeia-ekdosis/odikes">Σημεία έκδοσης στις Οδικές</a>
+              <a class="dropdown-item" href="shmeia-ekdosis/sta8eres">Σημεία έκδοσης στις Σταθερές</a>
               <a class="dropdown-item" href="">Τιμές εισιτηρίων</a>
               <a class="dropdown-item" href="">Τιμές χρονικών προϊόντων</a>
-              <a class="dropdown-item" href="agora">Αγορα Εισιτηρίων </a>
             </div>
           </div>
 
@@ -114,7 +113,6 @@
               <a class="dropdown-item" href="">Ωράριο λειτοθργίας Νυχτερινών - 24ώρων μέσων</a>
               <a class="dropdown-item" href="">Πληροφόρηση σε πραγματικό χρόνο</a>
               <a class="dropdown-item" href="">Σταθμοί μετεπιβίβασης</a>
-              <a class="dropdown-item" href="agora">Buy tickets</a>
             </div>
           </div>
 
